--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,13 @@ body , html {
   width: 100%;
 }
 
-.aap-logo {
+.app-logo {
   padding-left: 50px;
+}
+
+.sidebar {
+  display: flex;
+  height: 100vh;
+  float: left;
+  overflow: 'scroll initial';
 }
