--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,3 +14,23 @@ body , html {
   float: left;
   overflow: 'scroll initial';
 }
+
+.side-container {
+  padding-top: 30px;
+
+}
+.side-row {
+  padding: 30px;
+}
+
+.react-bootstarp-table thead  {
+  position: sticky;
+  top: 0;
+  background-color: #000;
+  z-index: 1021;
+  color: white;
+}
+.theads {
+  background-color: #000;
+  color: white;
+}
